# hardware_scraper

./: .gitignore  Makefile  README.md  pyproject.toml
hardware_scraper/: items.py  pipelines.py  settings.py
hardware_scraper/middlewares/: __init__.py  hardware.py  random_proxy_middleware.py  too_many_requests_middleware.py
hardware_scraper/spiders/: cpu_spider.py  gpu_spider.py  utils.py
scripts/: remove_cache_error_status_codes.py  remove_cache_list_pages.py
